# api-salary

./: Dockerfile  Makefile  README.md  docker-compose.yaml  example_data.sql  pyproject.toml
alembic/: env.py
alembic/versions/: 8d0500479335_enlarge_size_of_passwd_field.py  974431bc7e10_create_user_model.py  b54222e14cd9_add_salary_model.py
app/: .env_example  config.py  main.py
app/api/: salary.py  users.py
app/auth/: auth.py
app/db/: db_connection.py  models.py
app/schemas/: salary.py  users.py
app/services/: salary.py  users.py
