[tool.poetry]
name = "salaries"
version = "0.1.0"
description = ""
authors = ["Andrey Alekseev <leksus@leksus.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
pydantic = "^2.7.1"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
